# mayab-rust-coding-challenge-mx

./: .dockerignore  .env.example  .gcloudignore  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  DEMO_SCRIPT.md  Dockerfile  FINAL_EVIDENCE.md  Makefile  README.md  RUNBOOK.md  TOP2_CHECKLIST.md  deny.toml  docker-compose.yml  playwright.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  coverage.yml  release.yml  rust.yml  security.yml
docs/: ADDING_EXCHANGE.md  ARCHITECTURE.md  COMPETITOR_AUDIT_2026-07-12.md  EVIDENCE_MATRIX.md  MCP_DISCORD.md  OPERATIONS.md  QUANTITATIVE_EVIDENCE.md  RESPUESTA_AUDITORIA.md  SECURITY_MODEL.md  TESTNET_EXECUTION.md  TOP_TIER_UPGRADE.md  VIDEO_DEMO_SCRIPT.md  defensa-comite.md  openapi.yaml
docs/ADRs/: 0002-genetic-algorithm.md  0003-benchmark-rust-vs-node-php.md  0004-corpus-storage.md
internal/webui/web/: app.js  cursor.js  favicon.js  index.html  operator.js  privacidad.html  shader.js  styles.css
internal/webui/web/replay/: index.html  replay.css  replay.js
mayab-arbitrage/: Cargo.toml
mayab-arbitrage/benches/: corpus_scan_benchmark.rs
mayab-arbitrage/src/: auditoria.rs  config.rs  discord.rs  estrategia.rs  evaluation.rs  execution.rs  ga.rs  lib.rs  mercado.rs  metricas.rs  motor.rs  ou.rs  persistencia.rs  persistencia_timescale.rs  server.rs  tape.rs  testnet.rs  types.rs  version.rs
mayab-arbitrage/src/http/: router.rs
mayab-arbitrage/src/http/routes/: demo.rs  health.rs  state.rs
mayab-arbitrage/tests/: integration_test.rs  public_contract_test.rs
mayab-cli/: Cargo.toml
mayab-cli/src/: capture_corpus.rs  main.rs  scan_corpus.rs  verify_corpus.rs  verify_corpus_seal.rs
scripts/: check-webui-contrast.mjs  deploy-cloud-run.sh  generar-evidencia.sh  release-check.sh  smoke-demo.sh  smoke-research-corpus.sh
scripts/timescaledb/: schema.sql
src/: config.rs  ga.rs  main.rs  motor.rs  server.rs  types.rs
tests/e2e/: dashboard.spec.js
