[package]
name = "mayab-arbitrage"
version = "0.1.0"
edition = "2021"
description = "Demo segura de arbitraje BTC simulado con feeds publicos, API Axum y dashboard operativo."
license = "MIT"
publish = false
keywords = ["bitcoin", "arbitrage", "axum", "tokio", "simulation"]
categories = ["command-line-utilities", "simulation"]

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1", optional = true }
axum = { version = "0.7", features = ["ws"] }
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
crc32fast = "1.4"
ed25519-dalek = "2.1"
futures-util = "0.3"
hex = "0.4"
hmac = { version = "0.12", optional = true }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.10"
smallvec = { version = "1.12", features = ["serde"] }
subtle = "2.5"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "fs", "trace", "set-header", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-postgres = { version = "0.7", optional = true }

[features]
timescaledb = ["dep:tokio-postgres"]
testnet-execution = ["dep:async-trait", "dep:base64", "dep:hmac"]

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "motor_benchmark"
harness = false

[[bench]]
name = "corpus_scan_benchmark"
harness = false
